aggiunto stile pagina

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- css -->
+    <link rel="stylesheet" href="css/style.css">
     <title>Lista Cognomi</title>
 </head>
 
 <body>
-
+    <main>
+        <h1>Lista Cognomi</h1>
+        <ol id="cognomi"></ol>
+    </main>
     <script src="js/script.js"></script>
 </body>
 
